--- a/styles/profile.css
+++ b/styles/profile.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     min-height: 100vh;
-    background-color: #f4f7fa; /* Light background color */
+    background-color: #B1F0F7; /* Light background color */
     color: #333; /* Text color */
 }
 
