--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     min-height: 100vh;
-    background-color: #f4f7fa;
+    background-color: #B1F0F7;;
     color: #333; 
 }
 
@@ -74,18 +74,19 @@ body {
     font-size: 18px;
     margin-bottom: 20px;
 }
+
 .category-cards {
     display: flex;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 40px;
     margin-top: 20px;
     overflow-x: auto;
     padding-bottom: 10px;
 }
 
 .category-card {
-    width: 280px;
-    background-color: #fff;
+    width: 350px;
+    background-color: #07d6cc;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -94,17 +95,17 @@ body {
 
 .category-card:hover {
     transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px rgba(0, 81, 255, 0.2);
 }
 
 .category-card-content {
-    padding: 20px;
+    padding: 30px;
     text-align: center;
 }
 
 .category-card-content h3 {
     margin-top: 0;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
 }
 
 .category-card-content p {
@@ -117,14 +118,19 @@ body {
     background-color: #2980b9;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 12px 25px;
     cursor: pointer;
     font-size: 1rem;
     border-radius: 4px;
 }
 
 .category-card-content button:hover {
-    background-color: #021929;
+    background-color: #0f4569;
+}
+
+.category-card-content .icon {
+    font-size: 3rem;
+    margin-bottom: 20px;
 }
 
 @media (max-width: 900px) {
@@ -134,7 +140,7 @@ body {
     }
 
     .category-card {
-        width: 250px;
+        width: 300px;
     }
 }
 
